--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 
 <body>
     <header class="header"></header>
-    <nav>
-        <div>
+    <nav class="nav-container">
+        <div class="img-title">
+            <img src="Images/Group 40071 (2).png" alt="">
             <h3 class="nav-title">Hero <span class="text-primary">Travel</span></h3>
         </div>
         <div class="nav-bar">
