--- a/index.html
+++ b/index.html
@@ -1000,7 +1000,8 @@
                 Sodales dictumst nec
                 nibh pellentesque.</p>
             <ul class="perfect-p2">
-                <li>Tempus euismod lacus mauris dignissim quis in ultrices. Magna nullam odio neque diam. Sociis erat at.</li>
+                <li>Tempus euismod lacus mauris dignissim quis in ultrices. Magna nullam odio neque diam. Sociis erat
+                    at.</li>
                 <li>Adipiscing ornare pellentesque mauris volutpat tortor vitae platea porta lacus. Lectus suspendisse
                     nullam.</li>
             </ul>
@@ -1045,11 +1046,81 @@
             <div class="perfect-line">
                 <hr>
             </div>
-            <svg class="perfect-white-line" width="87" height="4" viewBox="0 0 87 4" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <rect width="87" height="4" rx="2" fill="white"/>
+            <svg class="perfect-white-line" width="87" height="4" viewBox="0 0 87 4" fill="none"
+                xmlns="http://www.w3.org/2000/svg">
+                <rect width="87" height="4" rx="2" fill="white" />
             </svg>
         </div>
     </section>
+
+    <section class="newsletter-container">
+
+        <div class="newsletter-content">
+            <h3 class="newsletter-content-title">
+                Newsletter
+            </h3>
+
+            <p class="newsletter-content-description">
+                Get your daily dose of travel news & tips. <br> Sign up today!
+            </p>
+
+            <hr class="newsletter-line">
+
+            <input class="newsletterinp" type="text" placeholder="Enter your name"><br>
+            <input class="newsletterinp" type="text" placeholder="Enter your email">
+            <button class="subs-button">Subscribe</button>
+        </div>
+
+        <div class="newsletter-img">
+            <div class="newsletter-img-textbox">
+                <h3 class="newsletter-img-title">
+                    Travel.com
+                </h3>
+                <h2 class="newsletter-img-subtitle">
+                    Save up to 70%
+                </h2>
+            </div>
+        </div>
+
+    </section>
+
+
+    <footer class="footer">
+        <div class="footer-title">
+            <img src="./Images/Group 40071 (2).png" alt="">
+            <h3 style="display: inline;">Hero <span style="color: #FF5400;">Travel</span></h3>
+        </div>
+
+        <p class="footer-description">
+            Lorem ipsum dolor sit amet consectetur. Nulla sit viverra morbi vitae blandit orci potenti vulputate. Leo
+            erat maecenas vitae elementum ultricies nullam.
+        </p>
+
+        <div class="footer-icons">
+            <div class="twitter">
+                <i class="fa-brands fa-twitter"></i>
+            </div>
+            <div class="facebook">
+                <i class="fa-brands fa-facebook"></i>
+            </div>
+            <div class="instagram">
+                <i class="fa-brands fa-instagram"></i>
+            </div>
+            <div class="github">
+                <i class="fa-brands fa-github"></i>
+            </div>
+
+        </div>
+
+        <div class="linebreak" style="padding-left: 160px; padding-right: 160px; margin-bottom: 50px;">
+            <hr>
+        </div>
+
+        <p class="footer-end-text">
+            2017, All Rights Reserved.
+        </p>
+
+    </footer>
 </body>
 
 </html>
