--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <nav class="nav-container">
         <div class="img-title">
             <img src="Images/Group 40071 (2).png" alt="">
-            <h3 class="nav-title">Hero <span class="text-primary">Travel</span></h3>
+            <h3 class="nav-title">Sakura <span class="text-primary">Travel</span></h3>
         </div>
         <div class="nav-bar">
             <ul>
@@ -33,8 +33,7 @@
     </nav>
     <div class="banner-container">
         <h3 class="banner-title">Explore Your Travel</h3>
-        <p class="banner-description">Dolor sit amet consectetur. Nullam suspendisse vitae ultricies dolor adipiscing.
-            In et odio enim ac quis sapien urna eu phasellus.</p>
+        <p class="banner-description">One of the most rewarding aspects of travel is experiencing new cultures. Try local cuisines, attend traditional events, and engage with locals to gain a deeper understanding of the places you visit.</p>
         <div class="banner-input">
 
             <div class="banner-where-field">Where go</div>
@@ -60,19 +59,14 @@
     <section class="tours-container">
         <div class="tours-description">
             <h3 class="tours-heading">Our Popular Tours</h3>
-            <p class="tours-p1">Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa.
-                Sodales dictumst nec
-                nibh pellentesque.</p>
+            <p class="tours-p1"> Traveling allows you to immerse yourself in new cultures, meet different people, and witness breathtaking landscapes. Here are a few aspects to consider when exploring travel:</p>
             <ul class="tours-p2">
-                <li>Tempus euismod lacus mauris dignissim quis in ultrices. Magna nullam odio neque diam. Sociis erat at
-                    .</li>
-                <li>Adipiscing ornare pellentesque mauris volutpat tortor vitae platea porta lacus. Lectus suspendisse
-                    nullam.</li>
-                <li> Accumsan eget et turpis praesent lorem egestas enim elit bibendum. Risus at in.</li>
+                <li>Whether it's hiking in the mountains, lounging on a beach, or exploring a national park, connecting with nature is a fundamental part of travel. Consider destinations with diverse landscapes and ecosystems.
+                </li>
+                <li>Consider the impact of your travels on the environment and local communities. Choose eco-friendly accommodations, support local businesses, and be mindful of your ecological footprint.</li>
+                <li>Take photos, keep a travel journal, or create a travel blog to document your experiences. This not only helps you remember the journey but also allows you to share your adventures with others.</li>
             </ul>
-            <p class="tours-p3">Amet consectetur. Vulputate commodo felis molestie risus
-                ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus
-                natoque aliquet. Id bibendum nunc senectus semper tincidunt. </p>
+            <p class="tours-p3">Remember that each travel experience is unique, and there's no one-size-fits-all approach. Whether you're an avid adventurer or a leisurely traveler, exploring different aspects of travel can lead to personal growth and memorable moments. </p>
             <button class="btn-primary tours-p4">Read More</button>
         </div>
         <div class="tours-img">
@@ -85,8 +79,7 @@
         <h2 class="destination-title">Choose Your Destination</h2>
 
         <p class="destination-description">
-            Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. Sodales dictumst nec nibh
-            pellentesque
+            Embarking on a journey to a new destination is like opening the pages of a captivating story. Each place holds its unique charm, from the vibrant streets of bustling cities to the serene landscapes of tranquil retreats. 
         </p>
 
         <div class="destination-img-container">
@@ -126,8 +119,7 @@
         <h2 class="choose-title">Why Choose Us</h2>
 
         <p class="choose-description">
-            Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. Sodales dictumst nec nibh
-            pellentesque.
+            Immerse yourself in a destination that offers a diverse and rich cultural experience, allowing you to connect with local traditions, cuisine, and history.
         </p>
         <div class="choose-card-container">
             <div class="card1">
@@ -697,8 +689,7 @@
                     </defs>
                 </svg>
                 <h3 class="card-title">Handpicked Hotels</h3>
-                <p class="card-description">Amet consectetur. Vulputate commodo felis molestie risus ornare nulla amet
-                    et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet.
+                <p class="card-description">Handpicked hotels are chosen based on high-quality standards. They often excel in providing excellent amenities, well-maintained facilities, and superior service to ensure a comfortable stay for guests.
                 </p>
             </div>
             <div class="card2">
@@ -775,8 +766,7 @@
                     </defs>
                 </svg>
                 <h3 class="card-title">World Class Service</h3>
-                <p class="card-description">Amet consectetur. Vulputate commodo felis molestie risus ornare nulla amet
-                    et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet.
+                <p class="card-description">World-class service revolves around putting the customer at the center of every interaction. It involves understanding their needs, anticipating preferences, and consistently exceeding expectations.
                 </p>
             </div>
             <div class="card3">
@@ -894,8 +884,7 @@
                     </defs>
                 </svg>
                 <h3 class="card-title">Best Price Guarantee</h3>
-                <p class="card-description">Amet consectetur. Vulputate commodo felis molestie risus ornare nulla amet
-                    et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet.
+                <p class="card-description">A Best Price Guarantee means that if a customer finds the same product or service offered elsewhere at a lower price, the business will match or beat that price.
                 </p>
             </div>
         </div>
@@ -904,8 +893,7 @@
         <h2 class="discount-title">Deals & Discounts</h2>
 
         <p class="discount-description">
-            Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. Sodales dictumst nec nibh
-            pellentesque.
+            Our enticing offers include irresistible discounts on hotel accommodations, flight packages, and curated travel packages.
         </p>
 
         <div class="discount-deals">
@@ -923,9 +911,7 @@
                     <h3 class="deal-info-title">Tour To Satorini</h3>
 
                     <p class="deal-info-description">
-                        Amet consectetur. Vulputate commodo felis
-                        molestie risus ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant
-                        adipiscing.
+                        Known for its breathtaking landscapes, charming villages, and rich history, Santorini promises an unforgettable escape. Picture yourself wandering through the narrow cobblestone streets of Oia.
                     </p>
 
                     <p class="deal-info-price">
@@ -949,9 +935,7 @@
                     <h3 class="deal-info-title">Tour To Satorini</h3>
 
                     <p class="deal-info-description">
-                        Amet consectetur. Vulputate commodo felis
-                        molestie risus ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant
-                        adipiscing.
+                        Known for its breathtaking landscapes, charming villages, and rich history, Santorini promises an unforgettable escape. Picture yourself wandering through the narrow cobblestone streets of Oia.
                     </p>
 
                     <p class="deal-info-price">
@@ -975,9 +959,7 @@
                     <h3 class="deal-info-title">Tour To Satorini</h3>
 
                     <p class="deal-info-description">
-                        Amet consectetur. Vulputate commodo felis
-                        molestie risus ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant
-                        adipiscing.
+                        Known for its breathtaking landscapes, charming villages, and rich history, Santorini promises an unforgettable escape. Picture yourself wandering through the narrow cobblestone streets of Oia.
                     </p>
 
                     <p class="deal-info-price">
@@ -996,14 +978,10 @@
     <section class="perfect-container">
         <div class="perfect-description">
             <h3 class="perfect-heading">A Simple Perfect Place To Get Lost</h3>
-            <p class="perfect-p1">Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa.
-                Sodales dictumst nec
-                nibh pellentesque.</p>
+            <p class="perfect-p1">Our curated tours ensure you experience the best of Santorini, from exploring ancient ruins to relaxing on pristine beaches.</p>
             <ul class="perfect-p2">
-                <li>Tempus euismod lacus mauris dignissim quis in ultrices. Magna nullam odio neque diam. Sociis erat
-                    at.</li>
-                <li>Adipiscing ornare pellentesque mauris volutpat tortor vitae platea porta lacus. Lectus suspendisse
-                    nullam.</li>
+                <li>Santorini is a beautiful Greek island known for its stunning sunsets, white-washed buildings, and crystal-clear waters.</li>
+                <li>Join us for a Santorini tour that blends relaxation, exploration, and the magic of Greek hospitality.</li>
             </ul>
             <button class="btn-primary tours-p4">Read More</button>
         </div>
@@ -1088,12 +1066,11 @@
     <footer class="footer">
         <div class="footer-title">
             <img src="./Images/Group 40071 (2).png" alt="">
-            <h3 style="display: inline;">Hero <span style="color: #FF5400;">Travel</span></h3>
+            <h3 style="display: inline;">Sakura <span style="color: #FF5400;">Travel</span></h3>
         </div>
 
         <p class="footer-description">
-            Lorem ipsum dolor sit amet consectetur. Nulla sit viverra morbi vitae blandit orci potenti vulputate. Leo
-            erat maecenas vitae elementum ultricies nullam.
+            Discover the world with confidence, curated experiences, and unparalleled service. Let us turn your travel dreams into cherished memories. Where every journey is a story waiting to be told. Bon voyage!
         </p>
 
         <div class="footer-icons">
