--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
             <ul class="tours-p2">
                 <li>Whether it's hiking in the mountains, lounging on a beach, or exploring a national park, connecting with nature is a fundamental part of travel. Consider destinations with diverse landscapes and ecosystems.
                 </li>
-                <li>Consider the impact of your travels on the environment and local communities. Choose eco-friendly accommodations, support local businesses, and be mindful of your ecological footprint.</li>
-                <li>Take photos, keep a travel journal, or create a travel blog to document your experiences. This not only helps you remember the journey but also allows you to share your adventures with others.</li>
+                <li>Consider the impact of your travels on the environment and local communities. Choose eco-friendly accommodations.</li>
+                <li>Take photos, keep a travel journal, or create a travel blog to document your experiences. This helps you remember the journey.</li>
             </ul>
-            <p class="tours-p3">Remember that each travel experience is unique, and there's no one-size-fits-all approach. Whether you're an avid adventurer or a leisurely traveler, exploring different aspects of travel can lead to personal growth and memorable moments. </p>
+            <p class="tours-p3">Remember that each travel experience is unique, and there's no one-size-fits-all approach.  </p>
             <button class="btn-primary tours-p4">Read More</button>
         </div>
         <div class="tours-img">
