--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
             <img src="Images/Group 40071 (2).png" alt="">
             <h3 class="nav-title">Sakura <span class="text-primary">Travel</span></h3>
         </div>
+        <i class="fa-solid fa-bars" id="icon"></i>
         <div class="nav-bar">
+            
             <ul>
                 <li class="text-primary"><a href=""></a>Home</li>
                 <li><a href=""></a>Package</li>
